# stringmatch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-check.yml
src/: lib.rs
