[package]
name = "stringmatch"
version = "0.3.0"
authors = ["Steve Pryde <steve@stevepryde.com>"]
edition = "2018"

license = "MIT"
description = "Allow the use of regular expressions or strings wherever you need string comparison"
homepage = "https://github.com/stevepryde/stringmatch"
repository = "https://github.com/stevepryde/stringmatch"
documentation = "https://docs.rs/stringmatch"
readme = "README.md"

keywords = ["string", "comparison", "match", "regex", "compare"]
categories = ["text-processing", "rust-patterns", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
