[package]
name = "stringmatch"
version = "0.4.0"
authors = ["Steve Pryde <steve@stevepryde.com>"]
edition = "2021"

license = "MIT"
description = "Allow the use of regular expressions or strings wherever you need string comparison"
homepage = "https://github.com/stevepryde/stringmatch"
repository = "https://github.com/stevepryde/stringmatch"
documentation = "https://docs.rs/stringmatch"
readme = "README.md"

keywords = ["string", "comparison", "match", "regex", "compare"]
categories = ["text-processing", "rust-patterns", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
serde_derive = ["serde"]

[dependencies]
regex = "1"
serde = {version = "1", features =["derive"], optional = true}

[dev-dependencies]
serde_json = "1"
